examples/failing/TypeSynonyms.purs
module Main where

type T1 = Array T2

type T2 = T1
